--- a/css/agency.css
+++ b/css/agency.css
@@ -22,6 +22,9 @@ body {
   width: 100%;
   text-align: center;
 }
+.col-md-3 p {
+  padding-top: 5%;
+}
 p {
   font-size: 14px;
   line-height: 1.75;
